--- a/.harness/cichecks.yaml
+++ b/.harness/cichecks.yaml
@@ -236,8 +236,7 @@ pipeline:
                           echo "Searching for errors in dags"
                           docker exec -i "$CONTAINER_NAME" ls
                           docker exec -i "$CONTAINER_NAME" ls logs/scheduler/latest/
-                          echo "cat"
-                          INFO=${docker exec -i "$CONTAINER_NAME" awk "/INFO/ {print}" logs/scheduler/latest/dataprep_wrangler_autopilot.py.log)
-                          echo $INFO
-                          ERRORS=${docker exec -i "$CONTAINER_NAME" awk "/Error/ {print}" logs/scheduler/latest/dataprep_wrangler_autopilot.py.log)
-                          echo $ERRORS
+                          echo "info"
+                          docker exec -i "$CONTAINER_NAME" awk "/INFO/ {print}" logs/scheduler/latest/dataprep_wrangler_autopilot.py.log
+                          echo "error"
+                          docker exec -i "$CONTAINER_NAME" awk "/Error/ {print}" logs/scheduler/latest/dataprep_wrangler_autopilot.py.log
