--- a/.harness/cichecks.yaml
+++ b/.harness/cichecks.yaml
@@ -233,10 +233,6 @@ pipeline:
 
                           # Scan the logs for any python errors
                           # These will have the prefix Error in the lines
-                          echo "Searching for errors in dags"
-                          docker exec -i "$CONTAINER_NAME" ls
-                          docker exec -i "$CONTAINER_NAME" ls logs/scheduler/latest/
-                          echo "info"
-                          docker exec -i "$CONTAINER_NAME" awk "/INFO/ {print}" logs/scheduler/latest/dataprep_wrangler_autopilot.py.log
-                          echo "error"
-                          docker exec -i "$CONTAINER_NAME" awk "/Error/ {print}" logs/scheduler/latest/dataprep_wrangler_autopilot.py.log
+                          echo "Searching for errors in example dags"
+                          if docker exec -i "$CONTAINER_NAME" awk "/Error/ {print}" logs/scheduler/latest/dataprep_wrangler_autopilot.py.log; then echo "errors found"; fi
+                          echo "no errors found"
