--- a/.harness/cichecks.yaml
+++ b/.harness/cichecks.yaml
@@ -234,5 +234,10 @@ pipeline:
                           # Scan the logs for any python errors
                           # These will have the prefix Error in the lines
                           echo "Searching for errors in example dags"
-                          if docker exec -i "$CONTAINER_NAME" awk "/Error/ {print}" logs/scheduler/latest/dataprep_wrangler_autopilot.py.log; then echo "errors found"; fi
+                          docker exec -i "$CONTAINER_NAME" awk "/Error/ {print}" logs/scheduler/latest/dataprep_wrangler_autopilot.py.log
+
+                          if docker exec -i "$CONTAINER_NAME" awk "/Error/ {print}" logs/scheduler/latest/dataprep_wrangler_autopilot.py.log; then echo "errors found" && exit 1; fi
+                          if docker exec -i "$CONTAINER_NAME" awk "/Error/ {print}" logs/scheduler/latest/deployment_prediction_generation.py.log; then echo "errors found"; fi
+                          if docker exec -i "$CONTAINER_NAME" awk "/Error/ {print}" logs/scheduler/latest/feature_discovery_example.py.log; then echo "errors found"; fi
+                          if docker exec -i "$CONTAINER_NAME" awk "/Error/ {print}" logs/scheduler/latest/model_training_xgboost.py.log; then echo "errors found"; fi
                           echo "no errors found"
