--- a/.harness/createreleasetag.yaml
+++ b/.harness/createreleasetag.yaml
@@ -40,7 +40,9 @@ pipeline:
                     connectorRef: account.dockerhub_datarobot_read
                     image: python:3.12
                     shell: Bash
-                    command: ls -la
+                    command: |-
+                      git checkout $<+stage.variables.COMMIT_SHA>
+                      git log -5
         variables:
           - name: COMMIT_SHA
             type: String
