--- a/.harness/createreleasetag.yaml
+++ b/.harness/createreleasetag.yaml
@@ -37,8 +37,7 @@ pipeline:
                       # Install github-cli
                       curl -sS https://webi.sh/gh | sh
 
-                      git checkout $<+stage.variables.COMMIT_SHA>
-                      git log -5
+                      git branch -r
           platform:
             os: Linux
             arch: Amd64
