--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,7 +57,7 @@ no_implicit_optional = true
 show_column_numbers = true
 warn_redundant_casts = true
 # warn_return_any = true  # TODO: Enable this check
-warn_unreachable = true
+warn_unreachable = false
 warn_unused_configs = true
 warn_unused_ignores = true
 show_error_codes = true
